# marketregime_hmm

./: .gitignore  .pre-commit-config.yaml  DATA_CONSOLIDATION_SUMMARY.md  LICENSE  README.md  pyproject.toml
data/cleaned/: credit_spread.csv  credit_spread.parquet  dgs10.csv  dgs10.parquet  dgs2.csv  dgs2.parquet  market_macro_merged.csv  market_macro_merged.parquet  move.csv  move.parquet  spx.csv  spx.parquet  tlt.csv  tlt.parquet  vix.csv  vix.parquet
data/processed/: cleaned_yield_curve_10y_2y_spread.csv  market_macro_merged.csv  market_macro_merged.parquet
data/raw/: AAA.csv  BAA.csv  DGS10.csv  DGS2.csv  MOVE.csv  TLT.csv  ^VIX_1day_20231027_20251027.csv  credit_spread_baa_aaa.csv  yield_curve_10y_2y_spread.csv
reports/: integrity_report.csv
src/: clean_data.py  fetch_data.py  main.py  validate_integrity.py
src/classes/data/: __init__.py  clean_data.py  cleaner.py  data_manager.py  fetch_data.py  loader.py  manager.py  validate_integrity.py
tests/: test_data_manager.py
