[project]
name = "intraday-momentum"
version = "0.1.0"
description = "Reproducible implementation and extension of an intraday momentum strategy on SPY — QuantConnect-ready research framework."
readme = "README.md"
authors = [
    { name = "BlackswanQuant Team", email = "blackswan.quants@gmail.com" }
]
license = "MIT"
requires-python = ">=3.12"

# === Core libraries ===
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.9.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "nb-clean>=4.0.1",
    "pre-commit>=4.0.1",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
